--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Born:</strong> <span>1982</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://ndhnhan82.github.io</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+(438) 505-5987</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Montreal, QC, Canada</span></li>
                 </ul>
