--- a/index.html
+++ b/index.html
@@ -228,9 +228,8 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-            in iste officiis commodi quidem hic quas.</p>
+          <p>During my tenure at College LaSalle, I had the opportunity to develop and construct several applications. I remain
+            enthusiastic about exploring new opportunities and furthering my application development endeavors.</p>
         </div>
 
         <div class="row" data-aos="fade-up">
