--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I am an aspiring computer scientist set to graduate in Winter 2024. Eager to dive into the tech world, I
+          <p>I am an aspiring computer scientist set to graduate in May 2024. Eager to dive into the tech world, I
             possess a blend of theoretical knowledge and practical skills. With a passion for innovation and
             problem-solving, I am poised to make meaningful contributions to the ever-evolving field of computer science
             upon completion of my studies.</p>
