--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             <div class="resume-item">
               <h4>Theory and Methodology of Teaching Mathematics</h4>
               <h5>2007 - 2009</h5>
-              <p><em>Postgraduate Training - Hue University of Education</em></p>
+              <p><em>Master of Education in Mathematics - Hue University of Education</em></p>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
