--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 
       <div class="profile">
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Hoang Nhan</a></h1>
-        <h1 class="text-light"><a href="index.html">Nguyen Dinh</a></h1>
+        <h1 class="text-light"><a href="index.html">`Dinh Hoang Nhan</a></h1>
+        <h1 class="text-light"><a href="index.html">Nguyen</a></h1>
 
         <div class="social-links mt-3 text-center">
           <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
