--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
       <div class="profile">
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">`Dinh Hoang Nhan</a></h1>
+        <h1 class="text-light"><a href="index.html">Dinh Hoang Nhan</a></h1>
         <h1 class="text-light"><a href="index.html">Nguyen</a></h1>
 
         <div class="social-links mt-3 text-center">
@@ -76,8 +76,8 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
-      <h1>Hoang Nhan</h1>
-      <h1>Nguyen Dinh</h1>
+      <h1>Dinh Hoang Nhan</h1>
+      <h1>Nguyen</h1>
 
       <p>I'm <span class="typed" data-typed-items="Software Developper, Mobile Developper, Web Developper"></span></p>
     </div>
