--- a/index.html
+++ b/index.html
@@ -91,10 +91,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I am an aspiring computer scientist set to graduate in May 2024. Eager to dive into the tech world, I
-            possess a blend of theoretical knowledge and practical skills. With a passion for innovation and
-            problem-solving, I am poised to make meaningful contributions to the ever-evolving field of computer science
-            upon completion of my studies.</p>
+          <p>As an undergraduate student pursuing a DEC in Computer Science at LaSalle College, I am deeply passionate about exploring the vast landscape of technology. My drive stems from a fervent commitment to innovation, a relentless pursuit of optimizing user experiences, and a strong belief in fostering inclusivity within the field. Equipped with a robust set of technical skills honed through my program and a collaborative mindset, I am eager to contribute meaningfully to a dynamic team, where I can both learn and offer my expertise.</p>
         </div>
 
         <div class="row">
