--- a/index.html
+++ b/index.html
@@ -293,7 +293,16 @@ systems and installing updates.</li>
             </div>
           </div>
 
-          
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/App5.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/App5.png" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="Property Rental Management"><i class="bx bx-plus"></i></a>
+                <a href="https://github.com/ndhnhan82/PropertyRentalManagement" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
 
         </div>
 
